--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     src: url(./fonts/SF-Pro.ttf);
 }
 
+
 body{
     background-color: black;
     height: 1400px;
@@ -14,27 +15,26 @@ button{
     border: 0;
     width: 100px;
     height: 100px;
-    font-size: 38px;
+    font-size: 45px;
     font-family: "SF-Pro";
     font-weight: 400;
     color: white;
     padding: 0;
     margin: 0;
+    user-select: none;
 }
-
-
 
 main{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
-    gap: 20px;
+    gap: 30px;
 }
 
 #display{
     width: 430px;
-    height: 100px;
+    height: 145x;
     font-family: "SF-Pro";
     font-weight: 100;
     font-size: 120px;
@@ -43,6 +43,7 @@ main{
 }
 
 #display span{
+    width: 100%;
     margin-right: 20px;
 }
 
@@ -101,3 +102,4 @@ main{
     color: #ffffff;
     font-size: 50px;
 }
+
