--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-color: black;
-    height: 1400px;
+    height: 500px;
 }
 
 button{
@@ -33,6 +33,8 @@ main{
 }
 
 #display{
+    display: flex;
+    flex-direction: column;
     width: 430px;
     height: 145x;
     font-family: "SF-Pro";
@@ -42,13 +44,21 @@ main{
     color: white;
 }
 
-#display span{
+#display #input{
     width: 100%;
-    margin-right: 20px;
+    margin-right: 25px;
+}
+
+#display #equation{
+    font-size: 32px;
+    margin-right: 25px;
+    color: #a5a5a5;
+
 }
 
 #buttons{
     display: flex;
+    width: 450px;
     gap: 10px;
 }
 
@@ -89,6 +99,11 @@ main{
     width: 210px;
     border-radius: 50px;
     text-align: left;
+    color:#333333
+}
+
+#zero span{
+    color: white;
 }
 
 #buttons-right{
