--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ main{
     display: flex;
     flex-direction: column;
     width: 430px;
-    height: 145x;
+    height: 185px;
     font-family: "SF-Pro";
     font-weight: 100;
     font-size: 120px;
@@ -45,15 +45,22 @@ main{
 }
 
 #display #input{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
+    align-items: end;
     width: 100%;
+    height: 143px;
+    margin-top: 30px;
     margin-right: 25px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #display #equation{
     font-size: 32px;
     margin-right: 25px;
     color: #a5a5a5;
-
 }
 
 #buttons{
